--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charanselvam</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <table cellspcaing="100">
@@ -23,7 +24,7 @@
         </tr>
     </table>
 <hr size="3" noshade="0">
-<h3>EDUCATIONAL QUALIFICATION</h3>
+<h3 class="boy">EDUCATIONAL QUALIFICATION</h3>
 <ul>
     <li>B.E- Electronics and Communication Engineering<br>
     Velammal Institute of Technology<br>
@@ -54,7 +55,8 @@ Attended "Drone Workshop" in Velammal Institute Of
 Technology at 10th and 11th august 2018 <br>
 <li><h4>INDUSTRIAL VISIT</h4></li>
 Visited The Ennore port on 24th august 2018. <br>
-Visited The Parlae Agro 7th march 2019.
+Visited The Parlae Agro on 7th march 2019.
+Visited The BHAVINI PFBR Atomic Power Station on 13th march 2020
 <li><h4>INPLANT TRAINING</h4></li>
 1. Underwent in-plant training on “electronics and
 communication” at Kaashiv info tech on 11th june 2018 to 16th
@@ -65,14 +67,20 @@ December to 6th December 2019 <br>
 <h3>TECHNICAL QUALIFICATION</h3>
 <ol>
 <li>C </li> 
-<li> Python </li>   
+<li>Python </li>   
 <li>LabView</li>   
-<li>Gravit</li>  
+<li>Gravit</li>
+<li>HTML/CSS</li>
+<li>node.js</li>
+<li>express.js</li>  
+<li>React</li>
 </ol>
-<h3>RESPONSIBILITIES HELD</h3>
-<p><strong><em>PROJECT HEAD , for a team of 4 <br>
-    PLACEMENT REPRESENTATIVE, for ECE dept <br>
-    CLASS REPRESENTATIVE, Academic year 2017-18</em></strong></p> 
+<h3>ROLES & RESPONSIBILITIES HELD</h3>
+<p><strong><em>PROJECT HEAD , for a team of 4. <br>
+    PLACEMENT REPRESENTATIVE, for ECE dept. <br>
+    CLASS REPRESENTATIVE, Academic year 2017-18.<br>
+    TECHNICAL CO-ORDINATOR , for Symposium "Igniculus2k18". <br>
+    EDITORIAL MEMBER OF DEPARTMENT MAGAZINE (EVOLVE).</em></strong></p> 
 <h3>AREAS OF INTEREST</h3>
 COMMUNICATION NETWORKS
 <h3>MINI-PROJECT</h3>
