--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <ul>
     <li>B.E- Electronics and Communication Engineering<br>
     Velammal Institute of Technology<br>
-        2017-2021 (CGPA-7.1)</li> &nbsp;
+        2017-2021 </li> &nbsp;
     <li>HSC- State Board<br>
         Jaigopal Garodia Vivekananda Vidyalaya Matric Higher
         Secondary School<br>
